--- a/city/src/main/res/layout/fragment_station_config_image.xml
+++ b/city/src/main/res/layout/fragment_station_config_image.xml
@@ -62,6 +62,7 @@
         android:background="@null"
         android:drawableTop="@mipmap/ic_lib_img"
         android:text="@string/local_pic"
+        android:visibility="gone"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
