--- a/city/src/main/res/layout/activity_station_theme_introduce.xml
+++ b/city/src/main/res/layout/activity_station_theme_introduce.xml
@@ -3,10 +3,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#5F402F">
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/btnBack"
+        style="@style/backButton"
+        android:padding="10dp"
+        android:src="@mipmap/btn_back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/theme_name"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="10dp"
+        android:background="#1DC8C9"
+        android:gravity="center"
+        android:padding="6dp"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        app:autoSizeTextType="uniform"
+        app:layout_constraintBottom_toBottomOf="@id/btnBack"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/btnBack"
+        app:layout_constraintTop_toTopOf="@id/btnBack"
+        tools:text="红色印记 主题介绍" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:paddingTop="16dp"
         android:id="@+id/introductions"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -16,14 +43,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/btnBack"
-        style="@style/backButton"
-        android:padding="20dp"
-        android:src="@mipmap/btn_back"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:listitem="@layout/item_introduction"
+        app:layout_constraintTop_toBottomOf="@id/btnBack" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
