--- a/city/src/main/res/layout/fragment_station_config_sound.xml
+++ b/city/src/main/res/layout/fragment_station_config_sound.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@mipmap/station_bg1">
 
     <ImageView
@@ -17,61 +17,45 @@
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toStartOf="@+id/ivSound"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintVertical_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/ivSound" />
+        app:layout_constraintTop_toTopOf="@+id/ivSound"
+        app:layout_constraintVertical_bias="0.5" />
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tvSecondPreview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@+id/ivPreView"
-        app:layout_constraintEnd_toEndOf="@+id/ivPreView"
-        app:layout_constraintTop_toBottomOf="@+id/ivPreView"
-        app:layout_constraintBottom_toBottomOf="@+id/ivPreView"
-        app:layout_constraintVertical_bias="1.2"
-        android:lineSpacingExtra="3dp"
-        android:paddingTop="8dp"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textColor="#ffffff"
-        android:textSize="14sp"/>
-
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/ivSound"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:visibility="visible"
         android:scaleType="centerInside"
         android:src="@drawable/ic_mic_selector"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.5"
-        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintVertical_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toEndOf="@+id/ivPreView"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_chainStyle="packed"/>
+        app:layout_constraintVertical_bias="0.5" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvSecondRecord"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@+id/ivSound"
-        app:layout_constraintEnd_toEndOf="@+id/ivSound"
-        app:layout_constraintTop_toBottomOf="@+id/ivSound"
-        app:layout_constraintBottom_toBottomOf="@+id/ivSound"
-        app:layout_constraintVertical_bias="1.2"
+        android:gravity="center"
         android:lineSpacingExtra="3dp"
         android:paddingTop="40dp"
-        android:gravity="center"
-        android:textStyle="bold"
         android:textColor="#ffffff"
-        android:textSize="14sp"/>
+        android:textSize="14sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@+id/ivSound"
+        app:layout_constraintEnd_toEndOf="@+id/ivSound"
+        app:layout_constraintStart_toStartOf="@+id/ivSound"
+        app:layout_constraintTop_toBottomOf="@+id/ivSound"
+        app:layout_constraintVertical_bias="1.2" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/btnSoundLib"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -80,40 +64,41 @@
         android:background="@null"
         android:drawableTop="@mipmap/ic_lib_sound"
         android:text="@string/voice_lib"
+        android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-
-<ImageView
+    <ImageView
         android:id="@+id/ivPreView1"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:scaleType="centerInside"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.5"
-        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintHorizontal_bias="0.5"
-    android:visibility="gone"
-        app:layout_constraintVertical_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5" />
+
     <ImageView
         android:id="@+id/ivSoundEmpty"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:scaleType="centerInside"
-        android:visibility="gone"
         android:src="@mipmap/ic_sound_default"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.5"
-        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintVertical_bias="0.5"
+        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintHorizontal_chainStyle="packed"/>
+        app:layout_constraintVertical_bias="0.5" />
 </androidx.constraintlayout.widget.ConstraintLayout>
